--- a/server.htm
+++ b/server.htm
@@ -1,3 +1,4 @@
 <h1>인공지능공학과 oss 실습</h1>
 <h2>오늘도 실습 이후 정리하여 제출</h2>
 <h3>오늘은 23시 59분까지가 아닌 18일(목) 수업시간 까지</h3>
+<h3>오늘은 23시 59분까지가 아닌 18일(목) 수업시간 까지</h3>
